Tweak memory for JDK 8